// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Proto representation of the internal ModelLine entity type.
message ModelLine {
  fixed64 external_model_provider_id = 1;
  fixed64 external_model_suite_id = 2;
  fixed64 external_model_line_id = 3;

  // Human-readable nickname for this ModelLine.
  string display_name = 4;

  // Human-readable string to describe the usage of this model line.
  string description = 5;

  // The start of the time range when this `ModelLine` is active, inclusive.
  google.protobuf.Timestamp active_start_time = 6;

  // The end of the time range when this `ModelLine` is active, exclusive.
  google.protobuf.Timestamp active_end_time = 7;

  enum Type {
    TYPE_UNSPECIFIED = 0;
    DEV = 1;
    PROD = 2;
    HOLDBACK = 3;
  }

  // Defines the type of the `ModelLine`.
  Type type = 8;

  fixed64 external_holdback_model_line_id = 9;

  // When the 'ModelLine' was created.
  google.protobuf.Timestamp create_time = 10;
  // When the 'ModelLine' was last updated.
  google.protobuf.Timestamp update_time = 11;
}
